src/human_study/program_30/python_err_msg.txt
File "./seq2parse/human_study/program_30/original.py", line 3
    c = b // 10(%10)
                ^
SyntaxError: invalid syntax
